--- a/program/requirements.txt
+++ b/program/requirements.txt
@@ -13,3 +13,6 @@ tiktoken>=0.8.0
 requests>=2.31.0
 numpy<=1.26.4
 huggingface_hub>=0.16.0
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.0.0
